# fullstack-portfolio

./: .pre-commit-config.yaml  LICENSE.md  Makefile  README.md
adapters/adapter-watcher/: pyproject.toml
adapters/aemp-adapter/: .gitignore  pyproject.toml  run_adapter.py
adapters/aemp-adapter/cred/: liebherr_lidat.yaml  takeuchi_tfm.yaml  volvo_caretrack.yaml  wacker_neuson.yaml
adapters/aemp-adapter/src/: run_adapter.py  xml_models.py
fastapi-master-api/: .coverage  .coveragerc  .dockerignore  .env.example  .flake8  Dockerfile  docker-compose.yaml  generate_reports.sh  prestart.sh  pyproject.toml
fastapi-master-api/alembic/: .coverage  env.py
fastapi-master-api/alembic/versions/: 12cf361c4c31_initial_tables.py  32785f9a2f10_create_adapter_table.py  46b0600f9da9_added_a_machines_table_for_aemp.py  676c84bcd7f8_added_type_to_authorization_column.py  823a2ed817ac_added_a_machines_table_for_aemp.py  a1bb1cb45c0a_added_takeuchi_and_liebherr_adapters.py  a6a21dfb20ab_added_polymorphic_auth_table.py  c9f78a7d00ab_updated_adapter_tables_to_aemp.py  cd3fd309b90a_make_serial_number_a_primary_key.py  d62c9da09bb2_set_names_to_nullable.py  dbc29584ac4a_make_serial_and_pin_unique.py  f92312a125f9_added_a_machines_table_for_aemp.py  fbc29a24c086_unique_constraint_on_adapter_and_user.py  fbc4b09fc544_add__at_to_last_login.py
fastapi-master-api/app/: dependancies.py  main.py  middleware.py  security.py  settings.py
fastapi-master-api/app/api/: adapters.py  auth.py  exceptions.py  machines.py  metrics.py  router.py  users.py
fastapi-master-api/app/domain/: adapters.py  auth.py  exceptions.py  machine.py  metric.py  user_token.py  users.py
fastapi-master-api/app/service/: adapters.py  auth.py  authorization.py  machines.py  metrics.py  users.py
fastapi-master-api/flake-report/: alembic.versions.12cf361c4c31_initial_tables.source.html  alembic.versions.fbc4b09fc544_add__at_to_last_login.source.html  app.api.manual_models.token.report.html  app.api.manual_models.token.source.html  app.api.models.create_user.source.html  app.api.models.credentials.source.html  app.api.models.generic_error.source.html  app.api.models.login_response.report.html  app.api.models.login_response.source.html  app.api.models.user.source.html  app.api.router.report.html  app.domain.auth.source.html  app.domain.exceptions.report.html  app.main.report.html  app.repository.models.__init__.source.html  app.repository.models.users.report.html  tests.api.test_users.report.html  tests.factories.token.report.html  tests.factories.user.report.html
fastapi-master-api/reports/coverage/: coverage.xml  d_4768ba609b46f9db___init___py.html  d_4768ba609b46f9db_adapters_py.html  d_4768ba609b46f9db_auth_py.html  d_4768ba609b46f9db_authorization_py.html  d_4768ba609b46f9db_exceptions_py.html  (+77 more)
fastapi-master-api/tests/: __init__.py  conftest.py
mercedes-connected-car-adapter/: .env.example  .gitignore  generate_reports.sh  pyproject.toml
mercedes-connected-car-adapter/scripts/: get_mercedes_telematics.py  settings.py
mercedes-connected-car-adapter/src/: get_mercedes_telematics.py
mercedes-connected-car-adapter/tests/: conftest.py  test_get_mercedes_telematics.py
(+294 files in other folders)
