[tool.poetry]
name = "fullstack-porfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.27"
uvicorn = "^0.15.0"
PyYAML = "^6.0"
python-dotenv = "^0.19.2"
pydantic = "^1.8.2"
psycopg2 = "^2.9.2"
PyJWT = "^2.3.0"
python-multipart = "^0.0.5"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
