[tool.poetry]
name = "adapter-watcher"
version = "0.1.0"
description = ""
authors = ["sionabraham <sion.abraham@tacto.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
kubernetes = "^21.7.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
