[tool.poetry]
name = "aemp-adapter"
version = "0.1.0"
description = ""
authors = ["sionabraham <sion.abraham@tacto.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
xsdata = "^22.1"
PyYAML = "^6.0"
lxml = "^4.7.1"
oauthlib = "^3.2.0"
requests-oauthlib = "^1.3.1"
isodate = "^0.6.1"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
